--- a/index.html
+++ b/index.html
@@ -96,6 +96,67 @@
     .carousel.carousel-fade .carousel-item img {
         transition: opacity 1.2s cubic-bezier(0.4,0,0.2,1);
     }
+    .achievement-box {
+        min-height: 4.5em;
+        padding: 2em 1em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: opacity 0.5s, min-height 0.3s, padding 0.3s;
+        word-break: break-word;
+        max-width: 600px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    @media (max-width: 576px) {
+        .achievement-box {
+            min-height: 6em;
+            padding: 2.5em 0.7em;
+            max-width: 98vw;
+        }
+    }
+    body {
+  background: linear-gradient(120deg, #f1f0f4, #e3e6f3, #c4d2ff, #f1f0f4);
+  background-size: 400% 400%;
+  animation: gradientMove 12s ease-in-out infinite;
+  transition: background 0.5s;
+}
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+[data-theme="dark"] body {
+  background: linear-gradient(120deg, #1d2658, #01020a, #1f2141, #090b30);
+  background-size: 400% 400%;
+  animation: gradientMove 12s ease-in-out infinite;
+  transition: background 0.5s;
+}
+.navbar {
+  background: rgba(255, 255, 255, 0.404) !important;
+  backdrop-filter: blur(8px);
+  box-shadow: 0 4px 24px rgba(0,0,0,0.18);
+  border: 1px solid rgba(255,255,255,0.18);
+}
+[data-theme="dark"] .navbar {
+  background: rgba(24, 26, 38, 0.65) !important;
+  backdrop-filter: blur(8px);
+  box-shadow: 0 4px 24px rgba(0,0,0,0.18);
+  border: 1px solid rgba(255,255,255,0.06);
+}
+#scroll-progress {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 4px;
+  background: linear-gradient(90deg, #033264, #002880);
+  z-index: 99999;
+  transition: width 0.2s cubic-bezier(0.4,0,0.2,1);
+}
+[data-theme="dark"] #scroll-progress {
+  background: linear-gradient(90deg, #0053be, #007aff);
+}
     </style>
     <script src="js/navbar-shadow.js"></script>
 </head>
@@ -103,12 +164,12 @@
 <body>
     <!-- Page Loader -->
 
-    <nav class="navbar bg-light navbar-expand-lg sticky-top" id="NavBar">
+    <nav class="navbar mx-3 mt-2 navbar-expand-lg sticky-top rounded-pill shadow" id="NavBar">
         <div class="container-fluid">
             <a href="#"><img class="navbar-brand" id="light" width="100"></a>
-            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler collapsed border-0 shadow-none" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+                aria-label="Toggle navigation" style="box-shadow:none; outline:none;">
                 <span class="icon-bar top-bar"></span>
                 <span class="icon-bar middle-bar"></span>
                 <span class="icon-bar bottom-bar"></span>
@@ -223,6 +284,7 @@ Saya adalah seseorang yang sangat tertarik dengan dunia teknologi terutama Softw
             <div class="container mt-5 text-center">
                 <h3 class="fw-bold" data-i18n="achievements_title">Achievements</h3>
                 <div id="rotatingAchievement" class="achievement-box google-sans-mono">🎓 Loading achievements...</div>
+                <div id="achievement-indicators" class="d-flex justify-content-center gap-2 mt-2"></div>
             </div>
             <div class="container mt-5" data-aos="fade-up">
                 <h2 class="fw-bold text-center"><a href="#cool" id="cool" class="link-none clickable" data-i18n="cool_stuff">Logo</a>
@@ -561,6 +623,9 @@ Saya adalah seseorang yang sangat tertarik dengan dunia teknologi terutama Softw
   </div>
 </div>
 
+    <!-- Scroll Progress Bar -->
+<div id="scroll-progress"></div>
+
     <!-- Footer Start -->
     <div id="footer"></div>
     <!-- Footer End -->
@@ -597,29 +662,69 @@ Saya adalah seseorang yang sangat tertarik dengan dunia teknologi terutama Softw
         let index = 0;
         let currentAchievements = achievements_en;
         const box = document.getElementById("rotatingAchievement");
+        const indicatorsContainer = document.getElementById("achievement-indicators");
 
-        function showNextAchievement() {
+        function renderIndicators() {
+            indicatorsContainer.innerHTML = "";
+            for (let i = 0; i < currentAchievements.length; i++) {
+                const dot = document.createElement("span");
+                dot.className = "achievement-dot" + (i === index ? " active" : "");
+                dot.setAttribute('data-index', i);
+                dot.style.cursor = 'pointer';
+                dot.onclick = function() {
+                    index = i;
+                    showNextAchievement(true); // true = manual
+                    resetAchievementInterval();
+                };
+                indicatorsContainer.appendChild(dot);
+            }
+        }
+
+        let achievementInterval;
+        function showNextAchievement(manual = false) {
             box.style.opacity = 0;
             setTimeout(() => {
                 box.innerHTML = currentAchievements[index];
                 box.style.opacity = 1;
-                index = (index + 1) % currentAchievements.length;
+                renderIndicators();
+                if (!manual) index = (index + 1) % currentAchievements.length;
             }, 300);
         }
-
+        function resetAchievementInterval() {
+            clearInterval(achievementInterval);
+            achievementInterval = setInterval(showNextAchievement, 3500);
+        }
         function setAchievementsLang(lang) {
             currentAchievements = lang === 'id' ? achievements_id : achievements_en;
             index = 0;
             showNextAchievement();
+            resetAchievementInterval();
         }
 
         showNextAchievement();
-        setInterval(showNextAchievement, 3500);
-
-        // Integrasi dengan switch bahasa
+        resetAchievementInterval();
         window.setAchievementsLang = setAchievementsLang;
     </script>
-
+<style>
+.achievement-dot {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #bbb;
+    transition: background 0.3s;
+    margin: 0 3px;
+}
+.achievement-dot.active {
+    background: #333;
+}
+[data-theme="dark"] .achievement-dot {
+    background: #555;
+}
+[data-theme="dark"] .achievement-dot.active {
+    background: #fff;
+}
+</style>
     <script>
         const texts = [
             "Muhammad Fachri Al Husein",
@@ -707,6 +812,15 @@ Saya adalah seseorang yang sangat tertarik dengan dunia teknologi terutama Softw
     <script src="js/weather.js"></script>
     <script src="js/dark-mode-switch.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+    window.addEventListener('scroll', function() {
+      const scrollProgress = document.getElementById('scroll-progress');
+      const scrollTop = window.scrollY || document.documentElement.scrollTop;
+      const docHeight = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+      const scrolled = (scrollTop / docHeight) * 100;
+      scrollProgress.style.width = scrolled + '%';
+    });
+    </script>
 </body>
 
 </html>
