--- a/islamic.html
+++ b/islamic.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ramadhan 1447H - Countdown & Bimbingan Islami</title>
-  <link rel="icon" type="image/png" href="image/flixdz_top.png">
+  <link rel="icon" type="image/png" href="logo_light.png">
   
   <!-- Prevent theme flash (set theme before CSS paints) -->
   <script>
@@ -22,6 +22,11 @@
   </script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" rel="stylesheet">
+  
+  <!-- Google Fonts - Inter -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Islamic Font -->
   <link href="https://fonts.googleapis.com/css2?family=Amiri+Quran&family=Amiri:wght@400;700&display=swap" rel="stylesheet">
@@ -475,7 +480,7 @@
     <button class="md3-icon-button" id="menu-toggle">
       <span class="material-symbols-outlined">menu</span>
     </button>
-    <h1 class="md3-top-app-bar-title">Ramadhan 1447H</h1>
+    <h1 class="md3-top-app-bar-title">Jadwal Sholat</h1>
     <button class="md3-icon-button" id="theme-toggle">
       <span class="material-symbols-outlined" id="theme-icon">dark_mode</span>
     </button>
