--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Google+Sans+Flex:opsz,wght@6..144,1..1000&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
 
@@ -69,7 +69,7 @@
             alt="Muhammad Fachri Al Husein Profile Picture" 
             class="profile-avatar" style="margin-top: 20px"
         > 
-            <h1>Muhammad Fachri<br>Al Husein</h1>
+            <h1>Muhammad Fachri Al Husein</h1>
             <p class="subtitle">Freelance Developer & Lulusan Rekayasa Perangkat Lunak</p>
             <div style="display: flex; gap: 10px; flex-wrap: wrap;">
                 <span class="badge">💻 Freelancer</span>
